# apigateway

./: .gitignore  CHANGELOG.md  README.md  auth.py  auth_utils.py  pyproject.toml  requirements.txt  server.py  test_api.sh  testi.py
src/apigateway/core/adapters/: base_adapter.py  django.py  fastapi.py  flask.py  generic.py
tests/validation/test_adapters/: conftest.py  test.py  test_django.py  test_fastapi.py  test_flask.py
tests/validation/test_generic/: test_error_handling.py  test_pre_post_validators.py  test_strict_vs_lax.py
