[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apigateway"
version = "1.0.0"
description = "API Gateway"
authors = [{ name = "PrabhBirJ" }]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.7"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]

django = [
    "django>=5.2.5",
    "httpx>=0.25.0",
    "pytest-django>=4.11.1",
]

flask = [
    "flask>=3.1.2",
    "httpx>=0.25.0",
    "pytest>=8.4.1",
]

fastapi = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.25.0",
    "httpx>=0.25.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

# Comprehensive test group
test = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.24.0", 
    "pytest-cov>=5.0.0",
    "httpx>=0.25.0",
    "pytest-django>=4.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-v --tb=short"  # Added shorter traceback format
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"